--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
   "devDependencies": {
     "inquirer": "^8.0.0",
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.12"
   }
 }
