--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "echo bash && node index.js"
   },
   "repository": {
     "type": "git",
